--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Old version, use new one -->
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-kinesis -->
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-kinesis</artifactId>
-      <version>${aws.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.amazonaws</groupId>-->
+<!--      <artifactId>aws-java-sdk-kinesis</artifactId>-->
+<!--      <version>${aws.version}</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sts</artifactId>
@@ -41,12 +42,33 @@
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
     </dependency>
-
+    <!-- Old version, use new one -->
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda -->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-lambda</artifactId>
-      <version>${aws.version}</version>
+      <version>1.11.920</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-core</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/kinesis -->
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>kinesis</artifactId>
+      <version>2.15.47</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/lambda -->
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>lambda</artifactId>
+      <version>2.15.47</version>
     </dependency>
 
   </dependencies>
