--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
       <artifactId>lambda</artifactId>
       <version>2.15.47</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sts -->
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>sts</artifactId>
+      <version>2.15.50</version>
+    </dependency>
 
   </dependencies>
 
