--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
 <!--      <artifactId>aws-java-sdk-kinesis</artifactId>-->
 <!--      <version>${aws.version}</version>-->
 <!--    </dependency>-->
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-sts</artifactId>
-      <version>${aws.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.amazonaws</groupId>-->
+<!--      <artifactId>aws-java-sdk-sts</artifactId>-->
+<!--      <version>${aws.version}</version>-->
+<!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
@@ -74,7 +74,29 @@
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>sts</artifactId>
-      <version>2.15.50</version>
+      <version>2.15.47</version>
+    </dependency>
+
+<!--    https://stackoverflow.com/questions/12458469/slf4j-failed-to-load-class-org-slf4j-impl-staticloggerbinder-in-a-maven-proj-->
+<!--    Fix error in IntelliJ with SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".-->
+    <!-- logging dependencies -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+      <exclusions>
+        <exclusion>
+          <!-- Defined below -->
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.30</version>
     </dependency>
 
   </dependencies>
